Fix bug with the feedback element overflowing the screen.

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@
 
 
 .page-feedback {
-    width: 100%;
+    max-width: 100%;
     padding-top: 5%;
     padding-bottom: 5%;
     padding-left: 20%;
@@ -82,7 +82,7 @@
         flex-direction: column;
 
         .feedback-content {
-            padding-right: 50%;
+            padding-right: 40%;
             font-size: 2vw;
             font-weight: bold;
             line-height: 1.5;
@@ -108,11 +108,13 @@
     }
 
     .footer-links {
+        width: 30%;
         display: flex;
         flex-direction: row;
-        gap: 20%;
+        gap: 5%;
         padding-top: 2.5%;
-        margin-left: 45%;
+        padding-bottom: 2.5%;
+        margin-left: 50%;
         font-size: 1vw;
         
         .link {
